--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -39,6 +40,7 @@
 		"@unsass/breakpoint": "^2.3.0",
 		"lucide-svelte": "^0.221.0",
 		"modern-normalize": "^2.0.0",
+		"nprogress": "^0.2.0",
 		"pkce": "^1.0.0-beta2",
 		"pkce-gen": "^1.1.0",
 		"sass": "^1.62.1",
