--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/nprogress": "^0.2.0",
+		"@types/sharp": "^0.32.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -44,6 +45,7 @@
 		"pkce": "^1.0.0-beta2",
 		"pkce-gen": "^1.1.0",
 		"sass": "^1.62.1",
+		"sharp": "^0.32.1",
 		"tippy.js": "^6.3.7"
 	}
 }
