--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@types/nprogress": "^0.2.0",
 		"@types/sharp": "^0.32.0",
+		"@types/uniqid": "^5.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -46,6 +47,7 @@
 		"pkce-gen": "^1.1.0",
 		"sass": "^1.62.1",
 		"sharp": "^0.32.1",
-		"tippy.js": "^6.3.7"
+		"tippy.js": "^6.3.7",
+		"uniqid": "^5.4.0"
 	}
 }
